# ana

./: .gitmodules  Cargo.toml  README.md  example.ana  lexicon-schema.json  lexicon-schema.rs  oekaki.json  pinksea.json
src/: lexicon.rs  macros.rs  main.rs  types.rs
src/ir/: Cargo.toml
src/ir/src/: blob.rs  boolean.rs  bytes.rs  cid_link.rs  integer.rs  lib.rs  null.rs  object.rs  string.rs
src/ir/src/props/: mod.rs
src/ir/src/props/types/: blob.rs  boolean.rs  bytes.rs  cid_link.rs  integer.rs  mod.rs  null.rs  string.rs
src/lexicon/: Cargo.toml
src/lexicon/src/: lib.rs  macros.rs
